Added encryption ssn to clients table and registeration controller.

--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -84,7 +84,7 @@ Language:
 
         <div class="form-group">
           <%= I18n.t "clients_edit.ss"  %> <br>
-          <%= text_field_tag :ssn, @client.ssn %>
+          <%= text_field_tag :encrypted_ssn, @client.encrypted_ssn %>
         </div>
 
         <div class="form-group">
