--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,18 +15,18 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :home_phone %><br>
-    <%=f.text_field :home_phone %>
+    <%= f.label :encrypted_home_phone %><br>
+    <%=f.text_field :encrypted_home_phone %>
   </div>
 
   <div class="form-group">
-    <%= f.label :cell_phone %><br>
-    <%=f.text_field :cell_phone %>
+    <%= f.label :encrypted_cell_phone %><br>
+    <%=f.text_field :encrypted_cell_phone %>
   </div>
 
   <div class="form-group">
-    <%= f.label :address %><br>
-    <%= f.text_field :address %>
+    <%= f.label :encrypted_address %><br>
+    <%= f.text_field :encrypted_address %>
   </div>
 
   <div class="form-group">
@@ -76,8 +76,8 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :email %><br />
-    <%= f.email_field :email %>
+    <%= f.label :encrypted_email %><br />
+    <%= f.email_field :encrypted_email %>
   </div>
 
   <div class="form-group">
