--- a/app/views/clients/_user_view.html.erb
+++ b/app/views/clients/_user_view.html.erb
@@ -93,6 +93,65 @@
   </tbody>
 </table>
 
+<h4>Foreclosure Application</h4>
+
+<table class="table table-hover">
+    <thead>
+      <th colspan="2"><h3>Foreclosure Application:</h3></th>
+    </thead>
+
+  <tbody>
+    <tr>
+      <td>Are you currently going through foreclosure?</td>   
+      <td><%= best_in_place @client.foreclosure, :currently_foreclosed, :as => :select, :class=>"best_in_place", :collection => foreclosure_status  %></td>
+    </tr>
+    <tr>
+      <td>Who is your originating lender?</td>    
+      <td><%= best_in_place @client.foreclosure, :originating_lender %></td>
+    </tr>
+    <tr>
+      <td>What is your loan number?</td>    
+      <td><%= best_in_place @client.foreclosure, :original_loan_number %></td>
+    </tr>
+    <tr>
+      <td>Who is your servicer?</td>    
+      <td><%= best_in_place @client.foreclosure, :servicer %></td>
+    </tr>
+    <tr>
+      <td>What is the servicer loan number?</td>
+      <td><%= best_in_place @client.foreclosure, :servicer_loan_number %></td>
+    </tr>
+    <tr>
+      <td>Monthly Mortgage Payment:</td>    
+      <td><%= best_in_place @client.foreclosure, :monthly_mortgage_payment, :display_with => :number_to_currency %></td>
+    </tr>
+    <tr>
+      <td>Loan origination date:</td>   
+      <td><%= best_in_place @client.foreclosure, :origination_date, :as => :date %></td>
+    </tr>
+    <tr>
+      <td>Have you been to court?</td>    
+      <td><%= best_in_place @client.foreclosure, :been_to_court, as: :select, collection: {false: "No", true: "Yes"} %></td>
+    </tr>
+    <tr>
+      <td>What is your court case number?</td>    
+      <td><%= best_in_place @client.foreclosure, :court_case_number %></td>
+    </tr>
+    <tr>
+      <td>Are you working with a lawyer?</td>   
+      <td><%= best_in_place @client.foreclosure, :working_with_lawyer, as: :select, collection: {false: "No", true: "Yes"} %></td>
+    </tr> 
+    <tr>
+      <td>Are you working with another HUD approved agency?</td>    
+      <td><%= best_in_place @client.foreclosure, :working_w_agency, as: :select, collection: {false: "No", true: "Yes"} %></td>
+    </tr>
+
+    <tr>
+      <td>What is the reason for your default?</td>   
+      <td><%= best_in_place @client.foreclosure, :reason_for_default, :as => :select, :class=>"best_in_place", :collection => cause_for_default %></td>
+    </tr>
+  </tbody>
+</table>
 
 <% if current_user.id != @client.user_id %>
   
