--- a/app/views/clients/status.html.erb
+++ b/app/views/clients/status.html.erb
@@ -3,8 +3,11 @@
     <h3>Meet your counselor!</h3>
     <%= @client.user_fullname %>
   <% else %>
-		<h3>A counselor has not yet been assigned to you. Please allow us around 48 hours to assign someone to you. ¯\_(ツ)_/¯</h3>
-		<p>If you have any questions, please shoot our intake specialist an email at: <a href="mailto:intake@lucha.org?Subject=Counseling%20Session" target="_top">Intake@lucha.org</a></p> 
+		<h2>Thank you for applying for housing counseling services!</h2> 
+    <h4>A LUCHA representative will contact you within two business days and inform you of the supplemental documents you need to provide for housing counseling. 
+        We look forward to working with you in addressing your housing needs.</h4>
+    <h4>-LUCHA Housing Counseling & Advocacy Department</h4>
+		<p><i>If you have any questions, please shoot our intake specialist an email at: <a href="mailto:intake@lucha.org?Subject=Counseling%20Session" target="_top">Intake@lucha.org</a></i></p> 
   <% end %>
 </div>
 
